// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches disabled state 1`] = `
<button
  className="px-4 py-2 text-gray-500 dark:text-gray-700 bg-gray-300 dark:bg-gray-800 cursor-not-allowed"
  disabled={true}
>
  Disabled
</button>
`;

exports[`Button matches loading state 1`] = `
<button
  className="px-4 py-2 text-gray-500 dark:text-gray-700 bg-gray-300 dark:bg-gray-800 cursor-wait"
  disabled={true}
>
  Disabled
  ...
</button>
`;

exports[`Button matches primary (default) type snapshot 1`] = `
<button
  className="px-4 py-2 text-white bg-primary hover:bg-primary-darker"
  disabled={false}
>
  Primary
</button>
`;

exports[`Button matches secondary type snapshot 1`] = `
<button
  className="px-4 py-2 text-white bg-secondary hover:bg-secondary-darker"
  disabled={false}
>
  Secondary
</button>
`;

exports[`Button matches with external className as object 1`] = `
<button
  className="px-4 py-2 text-white bg-primary hover:bg-primary-darker external-classname-true"
  disabled={false}
>
  Hello
</button>
`;

exports[`Button matches with external className as string 1`] = `
<button
  className="px-4 py-2 text-white bg-primary hover:bg-primary-darker external-classname"
  disabled={false}
>
  Hello
</button>
`;
